<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="tv_landing_page">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_spotify_streamer">Spotify Streamer</string>
    <string name="app_name_scores_app">Scores App</string>
    <string name="app_name_library_app">Library App</string>
    <string name="app_name_build_it_bigger">Build It Bigger</string>
    <string name="app_name_xyz_reader">XYZ Reader</string>
    <string name="app_name_capstone">Capstone: My Own App</string>
    <string name="msg_launch_app">"This button will launch "</string>
</resources>
