<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/tv_landing_page"
            android:textSize="28sp"/>

        <Button
            android:id="@+id/btn_spotify_streamer"
            style="@style/btn_app_name"
            android:text="@string/app_name_spotify_streamer"/>

        <Button
            android:id="@+id/btn_scores_app"
            style="@style/btn_app_name"
            android:text="@string/app_name_scores_app"/>

        <Button
            android:id="@+id/btn_library_app"
            style="@style/btn_app_name"
            android:text="@string/app_name_library_app"/>

        <Button
            android:id="@+id/btn_build_it_bigger"
            style="@style/btn_app_name"
            android:text="@string/app_name_build_it_bigger"/>

        <Button
            android:id="@+id/btn_xyz_reader"
            style="@style/btn_app_name"
            android:text="@string/app_name_xyz_reader"/>

        <Button
            android:id="@+id/btn_capstone"
            style="@style/btn_app_name_alt"
            android:text="@string/app_name_capstone"/>
    </LinearLayout>
</ScrollView>
